# certified-builder-api-py

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  docker-entrypoint.sh  env.example  lambda_function.py  mailtechfloripa.html  pyproject.toml  test_lambda_container.sh  test_local.py
.github/workflows/: workflow_build.yaml
src/application/: create_certificate.py  download_certificate.py  fetch_certificate.py  fetch_order_tech_floripa.py  list_user_certificates.py  send_for_build_certificate.py
src/application/dto/: __init__.py  download_certificate_dto.py  fetch_certificate_dto.py  list_user_certificates_dto.py
src/application/factory/: __init__.py  fetch_certificate_factory.py
src/application/mapper/: tech_order.py
src/application/strategy/: __init__.py  fetch_certificate_strategy.py
src/application/usecase/: __init__.py
src/domain/: response.py
src/domain/entity/: certificate.py  order.py  participant.py  product.py
src/domain/exception/: certificate_not_found.py
src/domain/repository/: __init__.py  base_repository.py  certificate_repository.py  order_repository.py  participant_repository.py  product_repository.py
src/domain/response/: build_order.py  failed.py  processed_orders.py  tech_floripa.py
src/infrastructure/aws/: api_gateway_restr_resolver.py  boto_aws.py  dynamodb_service.py  file_manager.py  sqs_service.py
terraform/: COST_OPTIMIZATION.md  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_dynamodb_repository_derivations.py  test_list_user_certificates.py
(+22 files in other folders)
