[project]
name = "certified-builder-api-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools[parser]>=3.19.0",
    "aws-lambda-typing>=2.20.0",
    "boto3>=1.40.9",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "retry>=0.9.2",
]
